first page updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Author Name: Pratiksha Tippe -->
 <body>
     <div class="container inner">
         <div class="row full">
-            <div class="row logo"><imag src="logo.png" width="170" height="170"></div>
+            <div class="row logo"><imag src="Logo.png" width="170" height="170"></div>
         </div>
         <div class="row name">DotheDew</div>
     </div>
