--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ Author Name: Pratiksha Tippe -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container inner">
+    <div class="container-fluid inner">
         <div class="row full">
-            <div class="row logo"><imag src="Logo.png" width="170" height="170"></div>
+            <div class="row logo"><img src="Logo.png" width="400" height="400"></div>
         </div>
         <div class="row name">DotheDew</div>
     </div>
@@ -23,4 +23,5 @@ integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+<script src="fun.js"></script>
 </html>
