--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container-fluid inner">
         <div class="row full">
-            <div class="row instruction">instruction</div>
+            <div class="row"><span id="instruction">Instruction</span></div>
             <div class="row score">
                 <input type="text" class="txt" placeholder="Enter the winning score"/>
             </div>
