--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 Author Name: Pratiksha Tippe -->
 <html lang="en">
 <head>
-    <title>DotheDew</title>
+    <title>DoTheDew</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
@@ -14,7 +14,7 @@ Author Name: Pratiksha Tippe -->
         <div class="row full">
             <div class="row logo"><img src="Logo.png" width="400" height="400"></div>
         </div>
-        <div class="row name">DotheDew</div>
+        <div class="row name">DoTheDew</div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
