--- a/canvas.html
+++ b/canvas.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="canvas.css">
 </head>
 <body>
-    <canvas id="game"></canvas>
+    <canvas id="game">
+    </canvas>
 </body>
 <script src="canvas.js"></script>
 </html>
