Implementation of score calculation

--- a/canvas.html
+++ b/canvas.html
@@ -10,7 +10,7 @@
 <body>
     <canvas id="game">
     </canvas>
-    <div id="container"><b class="title">Score</b><br><b class="score"><span>0</span> : <span>0</span></b></div>
+    <div id="container"><b class="title">Score</b><br><b class="score"><span id="player">0</span> : <span id="computer">0</span></b></div>
 </body>
 <script src="canvas.js"></script>
 </html>
