result page done

--- a/last.html
+++ b/last.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     <div class="container-fluid inner">
-        <div class="row full">You Won!
-            <div class="row greet">🎉</div>
+        <div class="row full">
+            <div class="row up"></div>
+            <div class="row greet">You Won!</div>
+                <div class="row emoji">🎉</div>
+            <div class="row down"></div>
         </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
