--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-fluid inner">
-        <div class="row full">
+        <div class="row">
             <div class="row"><span id="instruction">Instruction</span></div>
             <div class="row score">
                 <input type="text" class="txt" placeholder="Enter the winning score"/>
