--- a/last.html
+++ b/last.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>DoTheDew</title>
+    <title>Result Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
@@ -11,8 +11,10 @@
     <div class="container-fluid inner">
         <div class="row full">
             <div class="row up"></div>
-            <div class="row greet">You Won!</div>
+            <div class="rect">
+                <div class="row greet">You Won!</div>
                 <div class="row emoji">🎉</div>
+            </div>
             <div class="row down"></div>
         </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
