link html pages

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container-fluid inner">
         <div class="row">
-            <div class="row"><span id="instruction">Instruction</span></div>
+            <div class="row"><span class="instruction"><a href="instruction.html">Instruction</span></a></div>
             <div class="row score">
                 <input type="text" class="txt" placeholder="Enter the winning score"/>
             </div>
@@ -25,5 +25,4 @@ integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0
 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </canvas>
 </body>
-<script src="fun.js"></script>
 </html>
