--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ Author Name: Pratiksha Tippe -->
 </head>
 <body>
     <div class="container-fluid inner">
-        <div class="row full">
+        <div class="row main">
             <div class="row logo"><img src="Logo.png" width="400" height="400"></div>
         </div>
-        <div class="row name">DoTheDew</div>
+        <div class="row name"><a href="home.html">DoTheDew</div></a>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
