create folder and move

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,8 +1,6 @@
-<!-- Application Name: DotheDew
-Author Name: Pratiksha Tippe -->
 <html lang="en">
 <head>
-    <title>DoTheDew</title>
+    <title>Home Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
@@ -11,10 +9,13 @@ Author Name: Pratiksha Tippe -->
 </head>
 <body>
     <div class="container-fluid inner">
-        <div class="row main">
-            <div class="row logo"><img src="Logo.png" width="400" height="400"></div>
+        <div class="row">
+            <div class="row"><span class="instruction"><a href="instruction.html">Instruction</span></a></div>
+            <div class="row score">
+                <input type="text" class="txt" placeholder="Enter the winning score"/>
+            </div>
         </div>
-        <div class="row name"><a href="pages/home.html">DoTheDew</div></a>
+        <div class="row play"><a href="game.html"><button class="start">Play</button></div></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -22,5 +23,6 @@ Author Name: Pratiksha Tippe -->
 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</canvas>
 </body>
 </html>
