--- a/home.html
+++ b/home.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container-fluid inner">
         <div class="row">
-            <div class="row"><span class="instruction"><a href="pages/instruction.html">Instruction</span></a></div>
+            <div class="row"><span class="instruction"><a href="/pages/instruction.html">Instruction</span></a></div>
             <div class="row score">
                 <input type="text" class="txt" placeholder="Enter the winning score"/>
             </div>
         </div>
-        <div class="row play"><a href="pages/game.html"><button class="start">Play</button></div></div>
+        <div class="row play"><a href="/pages/game.html"><button class="start">Play</button></div></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
