--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ Author Name: Pratiksha Tippe -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="pages/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container-fluid inner">
         <div class="row main">
             <div class="row logo"><img src="Logo.png" width="400" height="400"></div>
         </div>
-        <div class="row name"><a href="pages/home.html">DoTheDew</div></a>
+        <div class="row name"><a href="home.html">DoTheDew</div></a>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
