--- a/instruction.html
+++ b/instruction.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container-fluid outer">
         <div class="row complete">
-            <div class="row close"><a href="/pages/home.html">❎</div></a>
+            <div class="row close"><a href="home.html">❎</div></a>
             <hr>
             <div class="row header">How To Play?</div><hr>
             <div class="row content">
