--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
                 <input type="text" class="txt" placeholder="Enter the winning score"/>
             </div>
         </div>
-        <div class="row play"><a href="game.html"><button class="start">Play</button></div></div>
+        <div class="row play"><a href="game.html"><button class="start">Play</button></div></a>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
