--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@ Author Name: Pratiksha Tippe -->
 <body>
     <div class="container-fluid inner">
         <div class="row main">
+            <!-- Display main logo of game -->
             <div class="row logo"><img src="Logo.png" width="400" height="400"></div>
         </div>
+        <!-- name of the game -->
         <div class="row name"><a href="home.html">DoTheDew</div></a>
     </div>
 </body>
