--- a/pages/instruction.html
+++ b/pages/instruction.html
@@ -11,6 +11,7 @@
             <div class="row close"><a href="home.html">❎</div></a>
             <hr>
             <div class="row header">How To Play?</div><hr>
+            <!-- this class contain all instruction to help the player -->
             <div class="row content">
                <p>1. User must enter a winning declaration number.</p>
                 <p>2. To start the game click play.</p>
