--- a/pages/last.html
+++ b/pages/last.html
@@ -12,6 +12,7 @@
         <div class="row full">
             <div class="row up"></div>
             <div class="rect">
+                <!-- It shows result -->
                 <div class="row greet">You Won!</div>
                 <div class="row emoji">🎉</div>
             </div>
