--- a/home.html
+++ b/home.html
@@ -10,12 +10,15 @@
 <body>
     <div class="container-fluid inner">
         <div class="row">
+            <!-- display instruction in right side -->
             <div class="row"><span class="instruction"><a href="instruction.html">Instruction</span></a></div>
             <div class="row score">
+                <!-- display text field for user -->
                 <input type="text" class="txt" placeholder="Enter the winning score"/>
             </div>
         </div>
-        <div class="row play"><a href="game.html"><button class="start">Play</button></div></a>
+        <!-- play the game click on button -->
+        <a href="game.html"><div class="row play"><button class="start">Play</button></div></a>
     </div>
 </canvas>
 </body>
