--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container-fluid inner">
+    <div class="container-fluid inner" id="result">
         <div class="row">
             <div class="row"><span class="instruction"><a href="instruction.html">Instruction</span></a></div>
             <div class="row score">
