updation in navigation

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="row play">
-            <button class="start" onclick="location.href='canvas.html'">Play</button>
+            <button class="start" onclick="location.href='canvas.html';localStorage.setItem('winScore',10)">Play</button>
         </div>
     </div>
 </body>
