--- a/last.html
+++ b/last.html
@@ -15,7 +15,16 @@
                 <div class="row greet">You Won!</div>
                 <div class="row emoji">🎉</div>
             </div>
-            <div class="row down"></div>
-        </div>
+
+            <div class="row full" id="loss">
+                <div class="row up"></div>
+                <div class="rect">
+                     <div class="row greet">You Loss!</div>
+                    <div class="row emoji">😔</div>
+                </div>
+</div>
+<script>
+    document.getElementById('loss').style.display='none';
+</script>
 </body>
 </html>
