--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="row"><span class="instruction"><a href="instruction.html">Instruction</span></a></div>
             <div class="row score">
-                <input id='input' type="text" class="txt" placeholder="Enter the winning score" value="">
+                <input id='input' type="text" class="txt" placeholder="Enter your target score" value="">
             </div>
         </div>
         <div class="row play">
