--- a/canvas.html
+++ b/canvas.html
@@ -12,7 +12,14 @@
 <body>
     <canvas id="game">
     </canvas>
-    <div id="container"><b class="title">Score</b><br><b class="score"><span id="player">0</span> : <span id="computer">0</span></b></div>
+    <div id="container">
+        <b class="title">Score</b><br>
+        <b class="score">
+        <span id="player">0</span> : <span id="computer">0</span></b>
+        <img id="random" src="">
+
+    </div>
+   
 </body>
 <script src="canvas.js"></script>
 </html>
