--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ Author Name: Pratiksha Tippe -->
 <body>
     <div class="container-fluid inner">
         <div class="row main">
-            <div class="row logo"><img src="images/Logo.png" width="400" height="400"></div>
+            <div class="row logo"><img src="images/Logo.png" width="200" height="200"></div>
         </div>
-        <div class="row name"><a href="home.html">DoTheDew</div></a>
+        <div class="row name" onclick="location.href='home.html'"><b>DoTheDew</b></div>
     </div>
 </body>
 </html>
