update in stylesheet

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="row play">
-            <button class="start" onclick="checkInput()">Play</button>
+            <button class="start" onclick="checkInput()"><b>Play</b></button>
         </div>
     </div>
 </body>
