--- a/canvas.html
+++ b/canvas.html
@@ -15,7 +15,9 @@
     <div id="container">
         <b class="title">Score</b><br>
         <b class="score">
-        <span id="player">0</span> : <span id="computer">0</span></b>
+         
+        <span id="player">0</span><span id="lable">You</span> : <span id="computer">0</span><span id="lable">Opponent</span></b>
+        
         <img id="random" src="">
 
     </div>
