--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Author Name: Pratiksha Tippe -->
         <div class="row main">
             <div class="row logo"><img src="images/Logo.png" width="200" height="200"></div>
         </div>
-        <div class="row name" onclick="location.href='home.html'"><b>DoTheDew</b></div>
+        <div class="row" onclick="location.href='home.html'"><b class="name">DoTheDew</b></div>
     </div>
 </body>
 </html>
