--- a/instruction.html
+++ b/instruction.html
@@ -12,14 +12,15 @@
             <hr>
             <div class="row header">How To Play?</div><hr>
             <div class="row content">
-               <p>1. User must enter a target score.</p>
-               <p>2. To start the game click on play.</p>
-               <p>3. User can move use the arrow keys to select one among three options i.e. Rock, Paper, Scissor.</p>
-               <p>4. If user selects rock and system randomly selects scissor then user gets one point or if 
-                   system selects paper then system gets one point.
-               </p>
-               <p>5. If user first reaches the winning target score then user wins the game otherwise user lose 
-                   the game.</p>
+                <ul type="square">
+                    <li>User must enter a target score.</li>
+                    <li>To start the game click on play.</li>
+                    <li>User can move use the arrow keys to select one among three options i.e. Rock, Paper, Scissor.</li>
+                    <li>If user selects rock and system randomly selects scissor then user gets one point or if 
+                            system selects paper then system gets one point.</li>
+                    <li>If user first reaches the winning target score then user wins the game otherwise user lose 
+                            the game.</li>
+                </ul>
             </div>
         </div>
     </div>
