--- a/canvas.html
+++ b/canvas.html
@@ -7,7 +7,7 @@
     <title>DoTheDew</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/canvas.css">
+    <link rel="stylesheet" href="canvas.css">
 </head>
 <body>
     <canvas id="game">
@@ -23,5 +23,5 @@
     </div>
    
 </body>
-<script src="JavaScript/canvas.js"></script>
+<script src="canvas.js"></script>
 </html>
