--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ Author Name: Pratiksha Tippe -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main/css/style.css">
 </head>
 <body>
     <div class="container-fluid inner">
         <div class="row main">
-            <div class="row logo"><img src="Logo.png" width="200" height="200"></div>
+            <div class="row logo"><img src="main/images/Logo.png" width="200" height="200"></div>
         </div>
-        <div class="row" onclick="location.href='home.html'"><b class="name">DoTheDew</b></div>
+        <div class="row" onclick="location.href='main/home.html'"><b class="name">DoTheDew</b></div>
     </div>
 </body>
 </html>
